# t180

./: .gitignore  GENERATIONAL_FRAMEWORK_SUMMARY.md  README.md  generational_demo.py  klipper_sdk_orchestration.kl  run_orchestration.py  test_db.py  test_generational_framework.py  workflow_prediction.kl
backend/: main.py  requirements.txt  verify_logic.py
db/: config.yaml  doltdump.sql  seed_minimal.sql
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/components/: ClipboardAnalyzer.css  ClipboardAnalyzer.tsx  DataCard.tsx
klipper_sdk/: README.md  holon_main.kl  holon_sub.kl  klipper_sdk_orchestration.kl  pyproject.toml  run_holon_demo.py  run_life_cycle.py  run_orchestration.py  test_semantic.py
klipper_sdk/docs/: architecture.md  requirements.md
klipper_sdk/src/klipper_sdk/: __init__.py  agents.py  app.py  client.py  clipboard_analyzer.py  etl.py  generational.py  holon.py  interface.py  learning.py  learning_tools.py  memory.py  meta_critic.py  models.py  orchestrator.py  tools.py
klipper_sdk/tests/: test_client.py  test_temporal.py
