[project]
name = "klipper-sdk"
version = "0.1.0"
description = "A Python SDK for the Klipper clipboard manager."
authors = [{ name = "RCL", email = "rcl@example.com" }]
dependencies = [
    "pydantic>=2.0.0",
    "jeepney>=0.8.0",
    "PyYAML>=6.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
